--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/NewMap.NewMap
+GameDefaultMap=/Game/Maps/Dyson_DC58.Dyson_DC58
 GameInstanceClass=/Game/GameInstance/BP_GameInstance.BP_GameInstance_C
-EditorStartupMap=/Game/Maps/NewMap.NewMap
+EditorStartupMap=/Game/Maps/Dyson_DC58.Dyson_DC58
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
